[tool.poetry]
name = "poten-user-python"
version = "0.1.0"
description = ""
authors = ["chilln <kimjihan77@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
pydantic = "^2.7.1"
passlib = "^1.7.4"
bcrypt = "4.0.1"
python-jose = "^3.3.0"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.9"
pydantic-settings = "^2.2.1"
starlette = "^0.37.2"
sqlalchemy = "^2.0.30"
mysql = "^0.0.3"
pymysql = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
